<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9F000000">
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@id/helper_text"
            android:layout_centerHorizontal="true">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_save_black_24dp"
                android:tint="@color/background_tint"
                android:contentDescription="@null" />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_cancel_black_24dp"
                android:tint="@color/background_tint"
                android:contentDescription="@null" />
        </LinearLayout>
        <TextView
            android:id="@+id/helper_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_cancel_helper"
            android:textSize="@dimen/content"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss"
            android:textSize="@dimen/content"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:paddingBottom="30dp">
        </TextView>
    </RelativeLayout>

    <View
        android:id="@+id/full_layout_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/save_cancel_helper_desc"/>
</FrameLayout>