<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9F000000">


    <RelativeLayout
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@color/background" >

        <RelativeLayout
            android:id="@+id/cancelView"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_cancel_black_24dp"
                android:layout_centerHorizontal="true"
                android:tint="@color/background_tint"
                android:contentDescription="@string/close_desc" />

            <TextView
                android:id="@+id/closeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/close"
                android:textSize="@dimen/button_name_font_size"
                android:text="@string/close"
                android:textColor="@color/background_tint"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>

        <TextView
        android:id="@+id/popUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="Visited Countries"
        android:textColor="@color/background_tint"
        android:textSize="@dimen/sub_title_font_size" />

        <RelativeLayout
            android:id="@+id/editView"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/edit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_edit_black_24dp"
                android:layout_centerHorizontal="true"
                android:tint="@color/background_tint"
                android:contentDescription="@string/edit_desc" />

            <TextView
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit"
                android:textSize="@dimen/button_name_font_size"
                android:text="@string/edit"
                android:textColor="@color/background_tint"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>

    <ListView
        android:id="@+id/popUpListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@color/background_tint"
        android:textColor="@color/background_tint"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:textSize="22sp"
        android:dividerHeight="1dp"
        android:layout_below="@id/popUpTitle"/>
    </RelativeLayout>

</RelativeLayout>